--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -1390,7 +1390,58 @@
    "id": "0f5edfd6-3291-4314-a3de-91e2dced0d7f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def scale_data(train, validate, test):\n",
+    "\n",
+    "    import sklearn\n",
+    "    from sklearn.preprocessing import MinMaxScaler\n",
+    "    \n",
+    "    #Create the object\n",
+    "    scaler = sklearn.preprocessing.MinMaxScaler()\n",
+    "    \n",
+    "    #Fit the object\n",
+    "    scaler.fit(train[['Bedroom_Count', 'Bathroom_Count', 'Finished_sqft', 'Tax_value_dollars', 'Tax_amount', 'Year_built']])\n",
+    "    \n",
+    "    #Use the object\n",
+    "    scaled_columns = scaler.transform(train[['Bedroom_Count', 'Bathroom_Count', 'Finished_sqft', 'Tax_value_dollars', 'Tax_amount', 'Year_built']])\n",
+    "    \n",
+    "    #Add the newly scaled columns (with the 'Scaled' names) to train\n",
+    "    train[['Bedroom_Count_Scaled', 'Bathroom_Count_Scaled', 'Finished_sqft_Scaled', 'Tax_value_dollars_Scaled', 'Tax_amount_Scaled', 'Year_built_Scaled']] = scaled_columns\n",
+    "    \n",
+    "    #Make new scaled columns with the newly scaled columns (with the 'Scaled' names) to validate and test\n",
+    "\n",
+    "    validate[['Bedroom_Count_Scaled', 'Bathroom_Count_Scaled', 'Finished_sqft_Scaled', 'Tax_value_dollars_Scaled', 'Tax_amount_Scaled', 'Year_built_Scaled']] = scaler.transform(validate[['Bedroom_Count', 'Bathroom_Count', 'Finished_sqft', 'Tax_value_dollars', 'Tax_amount', 'Year_built']])\n",
+    "    test[['Bedroom_Count_Scaled', 'Bathroom_Count_Scaled', 'Finished_sqft_Scaled', 'Tax_value_dollars_Scaled', 'Tax_amount_Scaled','Year_built_Scaled']] = scaler.transform(test[['Bedroom_Count', 'Bathroom_Count', 'Finished_sqft', 'Tax_value_dollars', 'Tax_amount', 'Year_built']])\n",
+    "    \n",
+    "    return train, validate, test\n",
+    "    \n",
+    "    \n",
+    "#----------------------------------------------------------------------------------------------------------------------------------   \n",
+    "    \n",
+    "def Qscale_data(train, validate, test):  \n",
+    "    \n",
+    "    import sklearn\n",
+    "    from sklearn.preprocessing import QuantileTransformer\n",
+    "    \n",
+    "    #Create the object\n",
+    "    scaler = sklearn.preprocessing.QuantileTransformer(output_distribution='normal')\n",
+    "    \n",
+    "    #Fit the object\n",
+    "    scaler.fit(train[['Bedroom_Count', 'Bathroom_Count', 'Finished_sqft', 'Tax_value_dollars', 'Tax_amount', 'Year_built']])\n",
+    "    \n",
+    "    #Use the object\n",
+    "    scaled_columns = scaler.transform(train[['Bedroom_Count', 'Bathroom_Count', 'Finished_sqft', 'Tax_value_dollars', 'Tax_amount', 'Year_built']])\n",
+    "    \n",
+    "    #Add the newly scaled columns (with the 'Scaled' names) to train\n",
+    "    train[['Bedroom_Count_Scaled', 'Bathroom_Count_Scaled', 'Finished_sqft_Scaled', 'Tax_value_dollars_Scaled', 'Tax_amount_Scaled', 'Year_built_Scaled']] = scaled_columns\n",
+    "\n",
+    "    #Make new scaled columns with the newly scaled columns (with the 'Scaled' names) to validate and test\n",
+    "\n",
+    "    validate[['Bedroom_Count_Scaled', 'Bathroom_Count_Scaled', 'Finished_sqft_Scaled', 'Tax_value_dollars_Scaled', 'Tax_amount_Scaled', 'Year_built_Scaled']] = scaler.transform(validate[['Bedroom_Count', 'Bathroom_Count', 'Finished_sqft', 'Tax_value_dollars', 'Tax_amount', 'Year_built']])\n",
+    "    test[['Bedroom_Count_Scaled', 'Bathroom_Count_Scaled', 'Finished_sqft_Scaled', 'Tax_value_dollars_Scaled', 'Tax_amount_Scaled','Year_built_Scaled']] = scaler.transform(test[['Bedroom_Count', 'Bathroom_Count', 'Finished_sqft', 'Tax_value_dollars', 'Tax_amount', 'Year_built']])\n",
+    "    \n",
+    "    return train, validate, test"
+   ]
   }
  ],
  "metadata": {
